# censys-ai

./: .gitignore  README.md
backend/: main.py  pyproject.toml
backend/scripts/: generate_openapi.py
backend/src/censys_ai/: .env.example
backend/src/censys_ai/api/: app.py  censys-ai-openapi.json
backend/src/censys_ai/api/routes/: summarization.py
backend/src/censys_ai/models/: certificate.py  host.py  web_property.py
backend/src/censys_ai/services/summarization/: config.py  prompts.py  summarizer.py
example_datasets/: certificates_dataset.json
frontend/: .env.example  index.html  package.json
frontend/src/: App.css  App.tsx  main.tsx  theme.tsx
frontend/src/api/: config.ts  summarization.ts
frontend/src/api/openapi/: index.ts  schema.d.ts  types.ts
specs/: censys_ai_specs.md
specs/stories/: 01_project_initialization.md  02_data_processing_implementation.md  03_summarization_service_functions.md  04_multi_dataset_summarization.md  05_backend_api_development.md  06_frontend_development.md  07_end_to_end_integration.md  08_documentation.md
